# bevy_unofficial_trait_queries

./: Cargo.toml  README.md
bevy_unofficial_trait_queries/: Cargo.toml
bevy_unofficial_trait_queries/src/: lib.rs
bevy_unofficial_trait_queries_macros/: Cargo.toml
bevy_unofficial_trait_queries_macros/src/: lib.rs
trait_query_test/: Cargo.toml
trait_query_test/src/: main.rs
